--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -159,11 +159,11 @@
                     denote a negative input, while "<i class="fa-solid fa-plus"></i>" can add numbers or cancel a
                     preceding negative sign. Click "<i class="fa-solid fa-equals"></i>"
                     for results and "All Clear <i class="fa-solid fa-trash-can"></i>" to reset.</p>
-                <p style="font-size: 0.9rem;">この電卓は基本的な算術を実行します。 『<i
-                        class="fa-solid fa-minus"></i>』ボタンは数字を引くか、負の入力を示すために使用できます。
-                    『<i class="fa-solid fa-plus"></i>』は数字を追加するか、前の負の符号をキャンセルするために使用できます。結果を表示するには 『<i
-                        class="fa-solid fa-equals"></i>』を、リセットするには
-                    『All Clear <i class="fa-solid fa-trash-can"></i>』をクリックしてください。
+                <p style="font-size: 0.9rem;">この電卓は基本的な算術を実行します。『<i
+                        class="fa-solid fa-minus"></i>』ボタンは数字を引くか、負の入力を示すために使用できます。『<i
+                        class="fa-solid fa-plus"></i>』は数字を追加するか、前の負の符号をキャンセルするために使用できます。結果を表示するには『<i
+                        class="fa-solid fa-equals"></i>』を、リセットするには『All Clear <i
+                        class="fa-solid fa-trash-can"></i>』をクリックしてください。
 
                 </p>
                 <br>
