--- a/static/styles.css
+++ b/static/styles.css
@@ -15312,7 +15312,7 @@ body.dark .operator-button.calc-button-highlight {
 
 body.dark #display,
 body.dark #calculation-log {
-    background-color: #333;
+    background-color: #333 !important;
     color: #fff;
     border-color: #fff;
     transition: background-color 0.2s ease, color 0.2s ease;
