--- a/static/styles.css
+++ b/static/styles.css
@@ -15238,6 +15238,8 @@ textarea:focus {
     margin-left: 15px;
     transition: background-color 0.2s ease, color 0.2s ease;
     background-color: #fff;
+    color: #000;
+    border-color: #000;
 }
 
 @media (max-width: 700px) {
@@ -15313,7 +15315,7 @@ body.dark .operator-button.calc-button-highlight {
 body.dark #display,
 body.dark #calculation-log {
     background-color: #333 !important;
-    color: #fff;
+    color: #fff !important;
     border-color: #fff !important;
     transition: background-color 0.2s ease, color 0.2s ease;
 }
