--- a/static/styles.css
+++ b/static/styles.css
@@ -15238,8 +15238,8 @@ textarea:focus {
     margin-left: 15px;
     transition: background-color 0.2s ease, color 0.2s ease;
     background-color: #fff;
-    color: #000;
-    border-color: #000;
+    color: #000 !important;
+    border-color: #000 !important;
 }
 
 @media (max-width: 700px) {
