--- a/static/styles.css
+++ b/static/styles.css
@@ -15240,6 +15240,8 @@ textarea:focus {
     background-color: #fff;
     color: #000 !important;
     border-color: #000 !important;
+    -webkit-appearance: none !important;
+    border-radius: 0 !important;
 }
 
 @media (max-width: 700px) {
@@ -15256,8 +15258,6 @@ textarea:focus {
 
     #calculation-log {
         margin-left: 0;
-        -webkit-appearance: none;
-        border-radius: 0;
     }
 }
 
@@ -15319,5 +15319,7 @@ body.dark #calculation-log {
     background-color: #333 !important;
     color: #fff !important;
     border-color: #fff !important;
+    -webkit-appearance: none !important;
+    border-radius: 0 !important;
     transition: background-color 0.2s ease, color 0.2s ease;
 }
