--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -105,9 +105,12 @@
                         <input type="text" id="display" readonly>
                         <div id="buttons">
                             <div class="row">
-                                <button class="custom-button calc-button long-button"
-                                    onclick="clearDisplay()"><strong>All
-                                        Clear <i class="fa-solid fa-trash-can"></i></strong></button>
+                                <button class="custom-button calc-button long-button" onclick="clearDisplay()">
+                                    <strong>All Clear <i class="fa-solid fa-trash-can"></i></strong>
+                                </button>
+                                <button class="custom-button calc-button" onclick="calculateSquareRoot()">
+                                    <i class="fa-solid fa-square-root-variable"></i></i>
+                                </button>
                             </div>
                             <div class="row">
                                 <button class="custom-button calc-button" onclick="appendNumber(7)"><i
