--- a/static/styles.css
+++ b/static/styles.css
@@ -15290,7 +15290,7 @@ textarea:focus {
 }
 
 #buttons .row:first-child {
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr 1fr !important;
 }
 
 
