Update calculator logic

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -145,7 +145,7 @@
                             <div class="row">
                                 <button class="custom-button calc-button" onclick="appendNumber(0)"><i
                                         class="fa-solid fa-0"></i></button>
-                                <button class="custom-button calc-button" onclick="appendNumber('.')"><span
+                                <button class="custom-button calc-button" onclick="appendNumber('0.')"><span
                                         style="font-size:2em;">.</span></button>
 
                                 <button class="custom-button calc-button" onclick="calculate()"><i
