Update project HTML

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -166,12 +166,15 @@
                 <br>
 
                 <p style="font-size: 0.9rem;">This calculator performs basic arithmetic. Click "<i
-                        class="fa-solid fa-equals"></i>" for results and "AC <i class="fa-solid fa-trash-can"></i>" to
-                    reset. Reload the page to clear the calculation log.</p>
+                        class="fa-solid fa-delete-left"></i>" to
+                    delete the right-most digit, "<i class="fa-solid fa-equals"></i>" for results, and "AC <i
+                        class="fa-solid fa-trash-can"></i>" to
+                    start a new session. Reload the page to clear the calculation log.</p>
 
-                <p style="font-size: 0.9rem;">この電卓は基本的な算術を実行します。結果を表示するには『<i
-                        class="fa-solid fa-equals"></i>』を、リセットするには『AC <i
-                        class="fa-solid fa-trash-can"></i>』をクリックしてください。計算ログを消去する場合は、ページを再読み込みしてください。</p>
+                <p style="font-size: 0.9rem;">この電卓は四則演算を行います。"<i
+                        class='fa-solid fa-delete-left'></i>"をクリックすると、最右端の数字が削除され、"<i
+                        class='fa-solid fa-equals'></i>"で結果が表示され、"AC <i
+                        class='fa-solid fa-trash-can'></i>"で新しいセッションを開始できます。計算ログをクリアするには、ページを再読み込みしてください。</p>
 
                 <br>
 
