--- a/static/styles.css
+++ b/static/styles.css
@@ -521,7 +521,8 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-    -webkit-appearance: button
+    -webkit-appearance: button;
+    appearance: button;
 }
 
 button:not(:disabled),
@@ -582,7 +583,8 @@ legend+* {
 
 [type="search"] {
     outline-offset: -2px;
-    -webkit-appearance: textfield
+    -webkit-appearance: textfield;
+    appearance: button;
 }
 
 ::-webkit-search-decoration {
@@ -595,7 +597,8 @@ legend+* {
 
 ::file-selector-button {
     font: inherit;
-    -webkit-appearance: button
+    -webkit-appearance: button;
+    appearance: button;
 }
 
 output {
