Update calculator logic

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -152,7 +152,7 @@
                                 <button class="custom-button calc-button" onclick="appendNumber('0.')"><span
                                         style="font-size:2em;">.</span></button>
 
-                                <button class="custom-button calc-button" onclick="calculate()"><i
+                                <button class="custom-button calc-button" onclick="equalsPressed()"><i
                                         class="fa-solid fa-equals"></i></button>
                                 <button class="custom-button calc-button operator-button"
                                     onclick="chooseOperator('+')"><i class="fa-solid fa-plus"></i></button>
