--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -100,7 +100,7 @@
                             class="fa-brands fa-square-js"></a></i> Basic Calculator (電卓)</h2>
                 <div id="wrapper">
                     <div id="calculator">
-                        <input type="text" id="display" readonly>
+                        <div id="display"></div>
                         <div id="buttons">
                             <div class="row">
                                 <button class="custom-button calc-button" onclick="clearDisplay()">
