--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -195,6 +195,21 @@
                 <script src="../../js/sidebar-toggle.js"></script>
                 <script src="../../js/calendar.js"></script>
                 <script src="../../js/back-to-top-toggle.js"></script>
+                <script>document.addEventListener('DOMContentLoaded', function () {
+                        let lastTouchEnd = 0;
+                        let buttons = document.querySelectorAll('.calc-button');
+
+                        buttons.forEach(button => {
+                            button.addEventListener('touchend', function (event) {
+                                let now = (new Date()).getTime();
+                                if (now - lastTouchEnd <= 300) {
+                                    event.preventDefault();
+                                }
+                                lastTouchEnd = now;
+                            }, false);
+                        });
+                    });
+                </script>
 
 </body>
 
