--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -195,21 +195,21 @@
                 <script src="../../js/sidebar-toggle.js"></script>
                 <script src="../../js/calendar.js"></script>
                 <script src="../../js/back-to-top-toggle.js"></script>
-                <script>document.addEventListener('DOMContentLoaded', function () {
+                <script>
+                    document.addEventListener('DOMContentLoaded', function () {
                         let lastTouchEnd = 0;
-                        let buttons = document.querySelectorAll('.calc-button');
+                        let calculatorDiv = document.querySelector('#calculator');
 
-                        buttons.forEach(button => {
-                            button.addEventListener('touchend', function (event) {
-                                let now = (new Date()).getTime();
-                                if (now - lastTouchEnd <= 180) {
-                                    event.preventDefault();
-                                }
-                                lastTouchEnd = now;
-                            }, false);
-                        });
+                        calculatorDiv.addEventListener('touchend', function (event) {
+                            let now = (new Date()).getTime();
+                            if (now - lastTouchEnd <= 180) {
+                                event.preventDefault();
+                            }
+                            lastTouchEnd = now;
+                        }, false);
                     });
                 </script>
+
 
 </body>
 
