--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -195,6 +195,20 @@
                 <script src="../../js/sidebar-toggle.js"></script>
                 <script src="../../js/calendar.js"></script>
                 <script src="../../js/back-to-top-toggle.js"></script>
+                <script>
+                    document.addEventListener('DOMContentLoaded', function () {
+                        let lastTouchEnd = 0;
+                        let calculatorDiv = document.querySelector('#calculator');
+
+                        calculatorDiv.addEventListener('touchend', function (event) {
+                            let now = (new Date()).getTime();
+                            if (now - lastTouchEnd <= 185) {
+                                event.preventDefault();
+                            }
+                            lastTouchEnd = now;
+                        }, false);
+                    });
+                </script>
 
 
 </body>
