--- a/templates/ja/index.html
+++ b/templates/ja/index.html
@@ -128,7 +128,7 @@
                 <span id="copy-message"></span>
                 <p style="font-size: 0.8rem;">
                     また、このツールのPythonで開発された使いやすいグラフィカルインターフェース版もご覧いただけます。この<a
-                        href="https://github.com/KORINZ/nhk-news-scraper-gui">GitHubリポジトリ</a>でチェックしてみてください。</a>
+                        href="https://github.com/KORINZ/nhk-news-scraper-gui">GitHubリポジトリ</a>でチェックしてみてください。
                     <br>
                     すべてのニュースコンテンツは、NHK（日本放送協会）によって著作権が保護されています。
                     <br>
@@ -149,14 +149,13 @@
                 <p>
                     3D押し出しバイオプリンティングは、組織工学の分野で急速に発展しており、カスタマイズされた生物工学的構造物の製造を可能にしています。本研究では、数値解析と機械学習を活用し、ニードル内部の流体剪断応力、印刷効率、印刷適性、および細胞生存率について考察し、これらの要素を最適化することを試みています。
                 </p>
-                <figure>
-                    <p align="center">
-                        <img src="../../static/printability_setup.png" alt="printability_setup" width="350"
-                            loading="lazy">
 
+                <figure style="text-align: center;">
+                    <p>
+                        <img src="../../static/printability_setup.png" alt="printability_setup" width="350">
                     </p>
-                    <figcaption align="center"><strong>Figure 1.</strong>
-                        印刷適性評価セットアップは、バイオインクの押し出しやフィラメント形成など、3Dバイオプリンティングプロセスの性能を評価し最適化するために設計されています。
+                    <figcaption><strong>Figure
+                            1.</strong>印刷適性評価セットアップは、バイオインクの押し出しやフィラメント形成など、3Dバイオプリンティングプロセスの性能を評価し最適化するために設計されています。
                     </figcaption>
                 </figure>
 
