--- a/templates/common/gallery.html
+++ b/templates/common/gallery.html
@@ -101,7 +101,7 @@
 
                 <figure style="text-align: center;">
                     <p>
-                        <img src="../../static/gallery/nijou.png" alt="Mount Nijō" width="50%">
+                        <img src="../../static/gallery/nijou.png" alt="Mount Nijō" style="width: 50%;">
                     </p>
                     <figcaption>二上山 (Mount Nijō)</figcaption>
                 </figure>
@@ -109,7 +109,7 @@
                 <h2><i class="fa-solid fa-fish-fins"></i> 動物 (Animals)</h2>
                 <figure style="text-align: center;">
                     <p>
-                        <img src="../../static/gallery/dolphin.png" alt="dolphin" width="50%">
+                        <img src="../../static/gallery/dolphin.png" alt="dolphin" style="width: 50%;">
                     </p>
                     <figcaption>イルカ (dolphin)</figcaption>
                 </figure>
