Add download log button

--- a/templates/common/projects.html
+++ b/templates/common/projects.html
@@ -164,6 +164,9 @@
                         <div class="clear-log-button-container">
                             <button class="custom-button" onclick="clearLog()">Clear Log <i
                                     class="fa-solid fa-eraser"></i></button>
+                            <button class="custom-button" id="download-log-button" onclick="downloadLog()">Download <i
+                                    class="fa-solid fa-file-lines"></i></button>
+
                         </div>
                     </div>
                 </div>
